// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CountryCard tests > Deve aplicar cardDark quando isDarkMode === true (modo escuro) 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <a
        class="_card_043c24 _cardDark_043c24"
        href="/country/Brasil"
      >
        <img
          alt="Bandeira de Brasil"
          class="_image_043c24"
          src="https://flag.com/flag.svg"
        />
        <div
          class="_content_043c24"
        >
          <h2
            class="_title_043c24"
          >
            Brasil
          </h2>
          <p
            class="_info_043c24"
          >
            <span
              class="_label_043c24"
            >
              População: 
            </span>
            1000000
          </p>
          <p
            class="_info_043c24"
          >
            <span
              class="_label_043c24"
            >
              Capital: 
            </span>
            Brasília
          </p>
        </div>
      </a>
    </div>
  </body>,
  "container": <div>
    <a
      class="_card_043c24 _cardDark_043c24"
      href="/country/Brasil"
    >
      <img
        alt="Bandeira de Brasil"
        class="_image_043c24"
        src="https://flag.com/flag.svg"
      />
      <div
        class="_content_043c24"
      >
        <h2
          class="_title_043c24"
        >
          Brasil
        </h2>
        <p
          class="_info_043c24"
        >
          <span
            class="_label_043c24"
          >
            População: 
          </span>
          1000000
        </p>
        <p
          class="_info_043c24"
        >
          <span
            class="_label_043c24"
          >
            Capital: 
          </span>
          Brasília
        </p>
      </div>
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CountryCard tests > Deve aplicar cardLight quando isDarkMode === false (modo claro) 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <a
        class="_card_043c24 _cardLight_043c24"
        href="/country/Brasil"
      >
        <img
          alt="Bandeira de Brasil"
          class="_image_043c24"
          src="https://flag.com/flag.svg"
        />
        <div
          class="_content_043c24"
        >
          <h2
            class="_title_043c24"
          >
            Brasil
          </h2>
          <p
            class="_info_043c24"
          >
            <span
              class="_label_043c24"
            >
              População: 
            </span>
            1000000
          </p>
          <p
            class="_info_043c24"
          >
            <span
              class="_label_043c24"
            >
              Capital: 
            </span>
            Brasília
          </p>
        </div>
      </a>
    </div>
  </body>,
  "container": <div>
    <a
      class="_card_043c24 _cardLight_043c24"
      href="/country/Brasil"
    >
      <img
        alt="Bandeira de Brasil"
        class="_image_043c24"
        src="https://flag.com/flag.svg"
      />
      <div
        class="_content_043c24"
      >
        <h2
          class="_title_043c24"
        >
          Brasil
        </h2>
        <p
          class="_info_043c24"
        >
          <span
            class="_label_043c24"
          >
            População: 
          </span>
          1000000
        </p>
        <p
          class="_info_043c24"
        >
          <span
            class="_label_043c24"
          >
            Capital: 
          </span>
          Brasília
        </p>
      </div>
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CountryCard tests > Deve renderizar as informações do país corretamente 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <a
        class="_card_043c24 _cardDark_043c24"
        href="/country/Brasil"
      >
        <img
          alt="Bandeira de Brasil"
          class="_image_043c24"
          src="https://flag.com/flag.svg"
        />
        <div
          class="_content_043c24"
        >
          <h2
            class="_title_043c24"
          >
            Brasil
          </h2>
          <p
            class="_info_043c24"
          >
            <span
              class="_label_043c24"
            >
              População: 
            </span>
            1000000
          </p>
          <p
            class="_info_043c24"
          >
            <span
              class="_label_043c24"
            >
              Capital: 
            </span>
            Brasília
          </p>
        </div>
      </a>
    </div>
  </body>,
  "container": <div>
    <a
      class="_card_043c24 _cardDark_043c24"
      href="/country/Brasil"
    >
      <img
        alt="Bandeira de Brasil"
        class="_image_043c24"
        src="https://flag.com/flag.svg"
      />
      <div
        class="_content_043c24"
      >
        <h2
          class="_title_043c24"
        >
          Brasil
        </h2>
        <p
          class="_info_043c24"
        >
          <span
            class="_label_043c24"
          >
            População: 
          </span>
          1000000
        </p>
        <p
          class="_info_043c24"
        >
          <span
            class="_label_043c24"
          >
            Capital: 
          </span>
          Brasília
        </p>
      </div>
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
